@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright 1997-2007 Sun Microsystems, Inc. All rights reserved.
+ * Copyright 1997-2008 Sun Microsystems, Inc. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -46,6 +46,6 @@ import javax.mail.*;
 public class POP3SSLStore extends POP3Store {
 
     public POP3SSLStore(Session session, URLName url) {
-	super(session, url, "pop3s", 995, true);
+	super(session, url, "pop3s", true);
     }
 }
